syntax = "proto3";

package api;

import "validate/validate.proto";
import "model.proto";

option go_package = "upassed.account.v1;client";

service Student {
    rpc FindByUsername(StudentFindByUsernameRequest) returns (StudentFindByUsernameResponse);
}

message StudentFindByUsernameRequest {
    string student_username = 1 [(validate.rules).string = {min_len: 4, max_len: 30}];
}

message StudentFindByUsernameResponse {
    StudentDTO student = 1;
}
